# NLGlite

./: .gitignore  NLGlite.py  README.md  main.py  pyproject.toml  train_model.py  training_data.lcfg  words_dictionary.json
Docs/: NLGlite.html
Docs/constants/: NLGlite.constants.constants.html  NLGlite.constants.html
Docs/grammar/: NLGlite.grammar.grammar.html  NLGlite.grammar.html
Docs/stochastics/: NLGlite.stochastics.html  NLGlite.stochastics.stochastics.html
Docs/trainer/: NLGlite.trainer.functions.html  NLGlite.trainer.html  NLGlite.trainer.reader.html  NLGlite.trainer.tagger.html  NLGlite.trainer.trainingStructure.html  NLGlite.trainer.wordPair.html
NLGlite/: NLGlite.py  README.md  __init__.py
NLGlite/constants/: __init__.py  constants.py
NLGlite/grammar/: __init__.py  grammar.py  table.txt
NLGlite/stochastics/: __init__.py  stochastics.py
NLGlite/trainer/: __init__.py  reader.py  tagger.py  trainingStructure.py
constants/: constants.py
data/: lordoftherings.txt  prideandprejudice.txt  words_dictionary.json
dh_popup/: dh_popup.py
grammar/: __init__.py  grammar.py
postprocessing/: __init__.py  postprocessing.py
src/: demo_bot.py  demo_game.py  discrim.py  main.py  summary.py
src/NLGlite/: __init__.py
src/dh_popup/: dh_popup.py
stochastics/: __init__ .py  __init__.py  stochastics.py
tests/grammar/: grammar_test.py
tests/stochastics/: stochastics_test.py
tests/trainer/: trainingStructure_test.py  wordPair_test.py
trainer/: __init__.py  functions.py  reader.py  tagger.py  trainingStructure.py  wordPair.py
(+7 files in other folders)
